--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ See here some examples of our glorious missions.</p>
                             </div>
                             <!-- END PORTFOLIO OVERLAY -->
                         </a>
-                        <a href="img/Projekts/SchwenkDEiffel.jpg" data-lightbox-gallery="eiffel">
+                        <a href="img/Projekts/SchwenkDEiffel.jpg" data-lightbox-gallery="eiffel"></a>
                     </div>
                 </div>                 
                 <!-- *** end  portfolio-item *** -->
@@ -339,7 +339,7 @@ See here some examples of our glorious missions.</p>
                             </div>
                             <!-- END PORTFOLIO OVERLAY -->
                         </a>
-                        <a href="img/Projekts/israel/ISRAELSchwenkFlorentineFlyer.jpg" data-lightbox-gallery="portfolio">
+                        <a href="img/Projekts/israel/ISRAELSchwenkFlorentineFlyer.jpg" data-lightbox-gallery="portfolio"></a>
                     </div>
                 </div>                 
                 <!-- *** end  portfolio-item *** -->
