--- a/schwenker.html
+++ b/schwenker.html
@@ -98,157 +98,96 @@
                 <div class="menui bottom-menu"></div>
             </div>
         </a>
+        <section class="padding-top-large"></section>
+        <section id="portfolio" class="portfolio text-center" data-pgc-field="porto">
+            <div class="container margin-bottom-medium">
+                <div class="row margin-bottom-medium wow fadeInUp">
+                    <h1>The original SchwenkTheWorld&nbsp;<strong class="main-color bold-text">Schwenker</strong></h1>
+                    <div class="line main-bg"></div>
+                    <div class="col-md-10 col-md-offset-1">
+                        <div class="subtitle">Come closer to your dream and get the original SchwenkTheWorld Schwenker.</div>
+                    </div>
+                </div>                 
+                <!-- *** end row *** -->
+                <!-- *****  Portfolio Filters ***** -->                 
+                <!-- *** end filters *** -->
+            </div>             
+            <!-- *** end container *** -->
+        </section>
         <!-- =========================
        Header
     ============================== -->         
         <!-- *** end Header *** -->
         <!-- =========================
-       Call to action
+       galery test
     ============================== -->         
-        <!-- *** end call-to-action *** -->
+        <section id="call-to-action" class="call-to-action">
+            <div class="row">
+                <div class="col-md-2 col-md-offset-1">
+                    <a href="img/schwenker/schwenker1.jpg" class="thumbnail" title="Not everybody liked that we schwenked Tokyo" data-lightbox-gallery="tokyo" data-lightbox-gallery="portfolio">
+                        <img src="img/schwenker/schwenker1.jpg">
+                    </a>
+                    <a href="img/schwenker/schwenker2.jpg" class="thumbnail" title="Not everybody liked that we schwenked Tokyo" data-lightbox-gallery="tokyo" data-lightbox-gallery="portfolio">
+                        <img src="img/schwenker/schwenker2.jpg">
+                    </a>
+                    <a href="img/schwenker/schwenker5.jpg" class="thumbnail" title="Not everybody liked that we schwenked Tokyo" data-lightbox-gallery="tokyo" data-lightbox-gallery="portfolio">
+                        <img src="img/schwenker/schwenker5.jpg">
+                    </a>
+                </div>
+                <div class="col-md-6">
+                    <a href="img/schwenker/schwenker4.jpg" class="thumbnail" title="Not everybody liked that we schwenked Tokyo" data-lightbox-gallery="tokyo" data-lightbox-gallery="portfolio">
+                        <img src="img/schwenker/schwenker4.jpg">
+                    </a>
+                </div>
+                <div class="col-md-2">
+                    <a href="img/schwenker/schwenker3.jpg" class="thumbnail" title="Not everybody liked that we schwenked Tokyo" data-lightbox-gallery="tokyo" data-lightbox-gallery="portfolio">
+                        <img src="img/schwenker/schwenker3.jpg">
+                    </a>
+                    <a href="img/schwenker/schwenker8.jpg" class="thumbnail" title="Not everybody liked that we schwenked Tokyo" data-lightbox-gallery="tokyo" data-lightbox-gallery="portfolio">
+                        <img src="img/schwenker/schwenker8.jpg">
+                    </a>
+                    <a href="img/schwenker/schwenker7.jpg" class="thumbnail" title="Not everybody liked that we schwenked Tokyo" data-lightbox-gallery="tokyo" data-lightbox-gallery="portfolio">
+                        <img src="img/schwenker/schwenker7.jpg">
+                    </a>
+                </div>
+            </div>
+        </section>
+        <!-- *** end galery test *** -->
         <!-- =========================
        Portfolio
-    ============================== -->
-        <section id="portfolio" class="portfolio text-center">
-            <section id="portfolio" class="portfolio padding-large text-center" data-pgc-field="porto">
-                <div class="container margin-bottom-medium">
-                    <div class="row margin-bottom-medium wow fadeInUp">
-                        <h1>The original SchwenkTheWorld&nbsp;<strong class="main-color bold-text">Schwenker</strong></h1>
-                        <div class="line main-bg"></div>
-                        <div class="col-md-10 col-md-offset-1">
-                            <div class="subtitle">Come closer to your dream and get the original SchwenkTheWorld Schwenker.</div>
-                        </div>
-                    </div>                     
-                    <!-- *** end row *** -->
-                    <!-- *****  Portfolio Filters ***** -->                     
-                    <!-- *** end filters *** -->
-                </div>                 
-                <!-- *** end container *** -->
-                <!-- *****  Portfolio  wrapper ***** -->
-                <div class="portfolio-wrapper margin-bottom-medium">
-                    <!-- =========================
-               Portfolio item
-            ============================== -->
-                    <div class="portfolio-item print">
-                        <div class="portfolio">
-                            <a href="img/schwenker/schwenker4.jpg" data-lightbox-gallery="portfolio">
-                                <img src="img/schwenker/schwenker4.jpg" alt="Portfolio 1" />
-                                <!-- END PORTFOLIO IMAGE -->
-                                <div class="portfolio-overlay">
-                                    <i class="fa fa-lg icon-zoom"></i>
-                                </div>
-                                <!-- END PORTFOLIO OVERLAY -->
-                            </a>
-                        </div>
-                    </div>
-                    <div class="portfolio-item photography">
-                        <div class="portfolio">
-                            <a href="img/schwenker/schwenker5.jpg" data-lightbox-gallery="portfolio">
-                                <img src="img/schwenker/schwenker5.jpg" alt="Portfolio 1" />
-                                <!-- END PORTFOLIO IMAGE -->
-                                <!-- END PORTFOLIO OVERLAY -->
-                            </a>
-                        </div>
-                    </div>                     
-                    <!-- *** end portfolio-item *** -->
-                    <!-- =========================
-               Portfolio item
-            ============================== -->
-                    <div class="portfolio-item photography">
-                        <div class="portfolio">
-                            <a href="img/schwenker/schwenker7.jpg" data-lightbox-gallery="portfolio">
-                                <img src="img/schwenker/schwenker7.jpg" alt="Portfolio 2" />
-                                <!-- END PORTFOLIO IMAGE -->
-                                <!-- END PORTFOLIO OVERLAY -->
-                            </a>
-                        </div>
-                    </div>
-                    <div class="portfolio-item print">
-                        <div class="portfolio">
-                            <a href="img/schwenker/schwenker6.jpg" data-lightbox-gallery="portfolio">
-                                <img src="img/schwenker/schwenker6.jpg" alt="Portfolio 1" />
-                                <!-- END PORTFOLIO IMAGE -->
-                                <!-- END PORTFOLIO OVERLAY -->
-                            </a>
-                        </div>
-                    </div>                     
-                    <!-- *** end  portfolio-item *** -->
-                    <!-- =========================
-               Portfolio item
-            ============================== -->                     
-                    <!-- *** end  portfolio-item *** -->
-                    <!-- =========================
-               Portfolio item
-            ============================== -->                     
-                    <!-- *** end  portfolio-item *** -->
-                    <!-- =========================
-               Portfolio item
-            ============================== -->
-                    <div class="portfolio-item ui">
-                        <div class="portfolio">
-                            <a href="img/schwenker/schwenker1.jpg" data-lightbox-gallery="portfolio">
-                                <img src="img/schwenker/schwenker1.jpg" alt="Portfolio 1" />
-                                <!-- END PORTFOLIO IMAGE -->
-                                <!-- END PORTFOLIO OVERLAY -->
-                            </a>
-                        </div>
-                    </div>                     
-                    <!-- *** end  portfolio-item *** -->
-                    <!-- =========================
-               Portfolio item
-            ============================== -->
-                    <div class="portfolio-item web-design">
-                        <div class="portfolio">
-                            <a href="img/schwenker/schwenker3.jpg" data-lightbox-gallery="portfolio">
-                                <img src="img/schwenker/schwenker3.jpg" alt="Portfolio 1" />
-                                <!-- END PORTFOLIO IMAGE -->
-                                <!-- END PORTFOLIO OVERLAY -->
-                            </a>
-                        </div>
-                    </div>                     
-                    <!-- *** end  portfolio-item *** -->
-                    <!-- =========================
-               Portfolio item
-            ============================== -->
-                    <div class="portfolio-item web-design">
-                        <div class="portfolio">
-                            <a href="img/schwenker/schwenker2.jpg" data-lightbox-gallery="portfolio">
-                                <img src="img/schwenker/schwenker2.jpg" alt="Portfolio 1" />
-                                <!-- END PORTFOLIO IMAGE -->
-                                <!-- END PORTFOLIO OVERLAY -->
-                            </a>
-                        </div>
-                    </div>                     
-                    <!-- *** end  portfolio-item *** -->
-                    <!-- =========================
-               Portfolio item
-            ============================== -->
-                    <div class="portfolio-item icon">
-                        <div class="portfolio">
-                            <a href="img/schwenker/schwenker8.jpg" data-lightbox-gallery="portfolio">
-                                <img src="img/schwenker/schwenker8.jpg" alt="Portfolio 1" />
-                                <!-- END PORTFOLIO IMAGE -->
-                                <!-- END PORTFOLIO OVERLAY -->
-                            </a>
-                        </div>
-                    </div>                     
-                    <!-- *** end  portfolio-item *** -->
-                </div>                 
-                <!-- *** end  portfolio-wrapper *** -->
-            </section>             
-            <!-- *** end container *** -->
-            <!-- *****  Portfolio  wrapper ***** -->             
-            <!-- *** end  portfolio-wrapper *** -->
-        </section>         
+    ============================== -->         
         <!-- *** end Portfolio *** -->
         <section id="why-choose-us" class="why-choose-us">
             <div class="container">
-                <h2>
-                Some more details <span class="light-text main-color">The original Schwenker</span></h2>
-                <div class="line main-bg margin-bottom-large"></div>
                 <div class="row text-center">
                     <!-- *****  Service Single ***** -->
-                    <div class="col-md-4">
+                    <div class="col-md-2 col-md-offset-1">
+                        <div>
+                            <div class="icon">
+                                <i class="fa fa-arrows-h"></i>
+                            </div>
+                            <h4>120 cm</h4>
+                        </div>
+                        <div class="slideInLeft">
+                            <div class="icon">
+                                <i class="fa fa-arrows-v"></i>
+                            </div>
+                            <h4>193 cm</h4>
+                        </div>
+                        <div class="slideInLeft">
+                            <div class="icon">
+                                <i class="fa fa-heart"></i>
+                            </div>
+                            <h4>Minimal Design</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="service wow fadeInUp text-left">
+                            <h4>The original Schwenker</h4>
+                            <p>You will get a Schwenker which is produced in Saarland. The legs are made with aluminium to garantie a light weight.<br />The grill is made with rust free steal, so that you can leave the Schwenker outside without worrying.<br />The Schwenker will be delivered with the ultimate SchwenkTheWorld guide, so that you can directly start your carreer as a real Schwenk ambassador.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
                         <div>
                             <div class="icon">
                                 <i class="fa fa-arrows-h"></i>
@@ -269,33 +208,63 @@
                         </div>
                     </div>
                     <!-- *****  Service Single ***** -->
-                    <div class="col-md-4">
-                        <div class="service wow fadeInUp text-left">
-                            <h4>The original Schwenker</h4>
-                            <p>You will get a Schwenker which is produced in Saarland. The legs are made with aluminium to garantie a light weight.<br />The grill is made with rust free steal, so that you can leave the Schwenker outside without worrying.<br />The Schwenker will be delivered with the ultimate SchwenkTheWorld guide, so that you can directly start your carreer as a real Schwenk ambassador.</p>
-                        </div>
+                    <!-- *****  Service Single ***** -->
+                    <!-- *****  Service Single ***** -->
+                    <!-- *****  Service Single ***** -->
+                    <div class="clearfix"></div>
+                </div>
+                <div class="row text-center">
+                    <!-- *****  Service Single ***** -->
+                    <!-- *****  Service Single ***** -->
+                    <div class="col-md-2">
+                        <!-- =========================
+       Send Message
+    ============================== -->                         
+                        <!-- ***** end send message *** -->                         
                     </div>
-                    <div class="col-md-4">
+                    <div class="text-right col-md-4">
                         <h1><strong>149 $</strong></h1>
                         <br>
-                        <br>
+                        <!-- =========================
+       Send Message
+    ============================== -->                         
+                        <!-- ***** end send message *** -->                         
+                    </div>
+                    <div class="col-md-2">
                         <!-- =========================
        Send Message
     ============================== -->
                         <section id="send-message">
-                            
-                           <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="9TBU33EE6FL2Y">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
-</form>
+                            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                                <input type="hidden" name="cmd" value="_s-xclick">
+                                <input type="hidden" name="hosted_button_id" value="9TBU33EE6FL2Y">
+                                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                                <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
+                            </form>
                             <!-- *** end Contact Form modal *** -->
                         </section>                         
+                        <!-- ***** end send message *** -->                         
+                    </div>
+                    <div class="col-md-2">
+                        <!-- =========================
+       Send Message
+    ============================== -->                         
+                        <!-- ***** end send message *** -->                         
+                    </div>
+                    <!-- *****  Service Single ***** -->
+                    <!-- *****  Service Single ***** -->
+                    <!-- *****  Service Single ***** -->
+                    <div class="clearfix"></div>
+                </div>
+                <div class="row text-center">
+                    <!-- *****  Service Single ***** -->
+                    <!-- *****  Service Single ***** -->
+                    <div class="col-md-12">
+                        <!-- =========================
+       Send Message
+    ============================== -->                         
                         <!-- ***** end send message *** -->
-                        <br />
-                        <br />
-                        <img src="img/free-shipping.jpg" width="200" /> 
+                        <img src="img/free-shipping.jpg" width="150" /> 
                         <p>
                             hzlzl</p>
                     </div>
@@ -468,6 +437,5 @@
         <script src="js/isotope.pkgd.min.js"></script>
         <script src="js/notie.js"></script>
         <script src="js/main.js"></script>
-        
     </body>
 </html>
