--- a/index.html
+++ b/index.html
@@ -134,7 +134,6 @@ It is more than just a way of doing BBQ. It is a way of life!<br />
                                         <section id="send-message">
                                             <a class="button pull-right internal-link bold-text light hvr-grow" data-gsc-widget="145026">
     Become a SchwenkTheWorld ambassador</a>
-                                           
                                         </section>                                         
                                         <!-- *** end Send Message *** -->
                                     </div>
@@ -515,11 +514,11 @@ See here some examples of our glorious missions.</p>
         <!-- =========================
        Send Message
     ============================== -->
-        <section id="send-message" class="send-message main-bg white-color text-center">
+        <section id="send-message" class="send-message text-center">
             <div class="row">
-                <p class="light-text">Here you can see the work of our ambassadors on <span class="bold-text">Instagram</span></p>
-                <div class="col-xs-12 text-center">
-                    <iframe src="//users.instush.com/h-slider/?cols=4&round=true&circle=false&pin=false&user_id=1342199658&username=refugeentredeuxeaux&sid=-1&susername=-1&tag=-1&stype=mine&t=999999JRcUEgeyhvBtfwGxhTWQmJd2ie7YvNfEc_J4r33F9sVV1CY-r3sOfiNTsnb_-_iqwyJKl_j-Ijk" allowtransparency="true" frameborder="0" scrolling="no" style="width:100%;height:190px;border:none;overflow:visible;" class="embed-responsive"></iframe>
+                <p>Here you can see the work of our ambassadors on <span class="bold-text">Instagram</span></p>
+                <div class="col-xs-12">
+                    <iframe src='https://www.juicer.io/api/feeds/schwenktheworld/iframe' frameborder='0' width='1000' height='1000' style='display:block;margin:0 auto;'></iframe>
                 </div>
             </div>
             <!-- Contact Form Modal -->             
@@ -582,7 +581,7 @@ See here some examples of our glorious missions.</p>
         <script src="js/isotope.pkgd.min.js"></script>
         <script src="js/notie.js"></script>
         <script src="js/main.js"></script>
-                <script>
+        <script>
   (function (w,i,d,g,e,t,s) {w[d] = w[d]||[];t= i.createElement(g);
     t.async=1;t.src=e;s=i.getElementsByTagName(g)[0];s.parentNode.insertBefore(t, s);
   })(window, document, '_gscq','script','//widgets.getsitecontrol.com/70351/script.js');
