--- a/index.html
+++ b/index.html
@@ -516,7 +516,10 @@ See here some examples of our glorious missions.</p>
     ============================== -->
         <section id="send-message" class="send-message text-center">
             <div class="row">
-                <p>Here you can see the work of our ambassadors on <span class="bold-text">Instagram</span></p>
+                <br />
+                <br />
+                <br />
+                <p>SchwenkTheWorld on <span class="bold-text">Facebook</span>:</p>
                 <div class="col-xs-12">
                     <iframe src='https://www.juicer.io/api/feeds/schwenktheworld/iframe' frameborder='0' width='1000' height='1000' style='display:block;margin:0 auto;'></iframe>
                 </div>
