--- a/schwenker.html
+++ b/schwenker.html
@@ -25,8 +25,7 @@
         <!-- =========================
        Fonts, typography and icons
     ============================== -->
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="css/font-awesome.css">
+        
         <link rel="stylesheet" href="css/typography.css">
         <!-- =========================
        Carousel, lightbox and circle generator
@@ -164,21 +163,21 @@
                     <div class="col-md-2 col-md-offset-1">
                         <div>
                             <div class="icon">
-                                <i class="fa fa-arrows-h"></i>
+                                <img class="myicon" src="img/icons/width.jpg">
                             </div>
                             <h4>120 cm</h4>
                         </div>
                         <div class="slideInLeft">
                             <div class="icon">
-                                <i class="fa fa-arrows-v"></i>
+                                <img class="myicon" src="img/icons/height.jpg">
                             </div>
                             <h4>193 cm</h4>
                         </div>
                         <div class="slideInLeft">
                             <div class="icon">
-                                <i class="fa fa-heart"></i>
+                                <img class="myicon" src="img/icons/weight.jpg">
                             </div>
-                            <h4>Minimal Design</h4>
+                            <h4>Only 10 pounds</h4>
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -190,21 +189,21 @@
                     <div class="col-md-2">
                         <div>
                             <div class="icon">
-                                <i class="fa fa-arrows-h"></i>
+                                <img class="myicon" src="img/icons/calc.jpg">
                             </div>
-                            <h4>120 cm</h4>
+                            <h4>0$ Shipping costs</h4>
                         </div>
                         <div class="slideInLeft">
                             <div class="icon">
-                                <i class="fa fa-arrows-v"></i>
+                                <img class="myicon" src="img/icons/worldwide.jpg">
                             </div>
-                            <h4>193 cm</h4>
+                            <h4>Free worldwide shipping</h4>
                         </div>
                         <div class="slideInLeft">
                             <div class="icon">
-                                <i class="fa fa-heart"></i>
+                                <img class="myicon" src="img/icons/handmade.jpg">
                             </div>
-                            <h4>Minimal Design</h4>
+                            <h4>Made in Saarland - Germany</h4>
                         </div>
                     </div>
                     <!-- *****  Service Single ***** -->
@@ -256,25 +255,9 @@
                     <!-- *****  Service Single ***** -->
                     <div class="clearfix"></div>
                 </div>
-                <div class="row text-center">
-                    <!-- *****  Service Single ***** -->
-                    <!-- *****  Service Single ***** -->
-                    <div class="col-md-12">
-                        <!-- =========================
-       Send Message
-    ============================== -->                         
-                        <!-- ***** end send message *** -->
-                        <img src="img/free-shipping.jpg" width="150" /> 
-                        <p>
-                            hzlzl</p>
-                    </div>
-                    <!-- *****  Service Single ***** -->
-                    <!-- *****  Service Single ***** -->
-                    <!-- *****  Service Single ***** -->
-                    <div class="clearfix"></div>
-                </div>                 
-                <!-- *** end row *** -->
-            </div>             
+                
+            </div>    
+            <br/><br/><br/>
             <!-- *** end container *** -->
         </section>
         <!-- =========================
