--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
         <!-- =========================
        Fonts, typography and icons
     ============================== -->
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="css/font-awesome.css">
+       
         <link rel="stylesheet" href="css/typography.css">
         <!-- =========================
        Carousel, lightbox and circle generator
@@ -522,6 +521,9 @@ See here some examples of our glorious missions.</p>
                 <p>SchwenkTheWorld on <span class="bold-text">Facebook</span>:</p>
                 <div class="col-xs-12">
                     <iframe src='https://www.juicer.io/api/feeds/schwenktheworld/iframe' frameborder='0' width='1000' height='1000' style='display:block;margin:0 auto;'></iframe>
+                    <br />
+                    <br />
+                    <br />
                 </div>
             </div>
             <!-- Contact Form Modal -->             
@@ -531,14 +533,15 @@ See here some examples of our glorious missions.</p>
         <!-- =========================
        Footer
     ============================== -->
-        <footer id="footer" class="footer">
+        <footer id="footer" class="footer white-color dark-bg">
             <div class="container padding-large text-center">
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1">
                         <figure class="margin-bottom-medium">
                             <h2>SchwenkTheWorld</h2>
                         </figure>
-                        <p class="margin-bottom-medium">If you like this project if you want to be a part of it, download the ultimate guide and start schwenking and share it with the Hashtag #schwenktheworld</p>
+                        <p class="margin-bottom-medium">If you like this project if you want to be a part of it, <a href="#" data-gsc-widget="145026">download the ultimate guide and start schwenking</a> and share it with the Hashtag #schwenktheworld</p>
+                        
                         <!-- =========================
                        Social icons
                     ============================== -->
