--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         <!-- =========================
        Fonts, typography and icons
     ============================== -->
-       
         <link rel="stylesheet" href="css/typography.css">
         <!-- =========================
        Carousel, lightbox and circle generator
@@ -475,10 +474,10 @@ See here some examples of our glorious missions.</p>
         <section id="promote" class="promote main-bg white-color">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-4 col-lg-offset-1 col-md-5 col-sm-4 text-center">
+                    <div class="col-md-4 col-sm-4 text-center">
                         <p class="light-text">OK, I want to be part of it</p>
                     </div>
-                    <div class="col-lg-6 col-lg-offset-1 col-md-7 col-sm-8 button-container">
+                    <div class="col-md-8 col-sm-8 button-container">
                         <a href="#" class="button deep hvr-grow" data-gsc-widget="145026">Become a Schwenker</a>
                         <span class="margin-right-small margin-left-small">or</span>
                         <a href="schwenker.html" class="button light hvr-grow">Get a Schwenker</a>
@@ -520,7 +519,7 @@ See here some examples of our glorious missions.</p>
                 <br />
                 <p>SchwenkTheWorld on <span class="bold-text">Facebook</span>:</p>
                 <div class="col-xs-12">
-                    <iframe src='https://www.juicer.io/api/feeds/schwenktheworld/iframe' frameborder='0' width='1000' height='1000' style='display:block;margin:0 auto;'></iframe>
+                    <iframe src='https://www.juicer.io/api/feeds/schwenktheworld/iframe' frameborder='0' style='display:block;margin:0 auto;outline: 1px dashed #171717; outline-offset: 10px;padding:30px;' width="100%" height="700"></iframe>
                     <br />
                     <br />
                     <br />
@@ -540,22 +539,10 @@ See here some examples of our glorious missions.</p>
                         <figure class="margin-bottom-medium">
                             <h2>SchwenkTheWorld</h2>
                         </figure>
-                        <p class="margin-bottom-medium">If you like this project if you want to be a part of it, <a href="#" data-gsc-widget="145026">download the ultimate guide and start schwenking</a> and share it with the Hashtag #schwenktheworld</p>
-                        
+                        <p class="margin-bottom-medium">If you like this project if you want to be a part of it, <a href="#" data-gsc-widget="145026">download the ultimate guide and start schwenking</a>.</p>
                         <!-- =========================
                        Social icons
                     ============================== -->
-                        <ul class="social margin-bottom-medium">
-                            <li class="facebook hvr-pulse">
-                                <a href="https://www.facebook.com/SchwenkTheWorld" target="_blank"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li class="youtube hvr-pulse">
-                                <a href="https://www.youtube.com/user/SchwenkTheWorld" target="_blank"><i class="fa fa-youtube"></i></a>
-                            </li>
-                            <li class="instagram hvr-pulse">
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                            </li>
-                        </ul>
                         <p class="copyright">
                         © Copyright 2017 SchwenkTheWorld - All Rights reserved</p>
                     </div>
