--- a/schwenker.html
+++ b/schwenker.html
@@ -165,13 +165,13 @@
                             <div class="icon">
                                 <img class="myicon" src="img/icons/width.jpg">
                             </div>
-                            <h4>120 cm</h4>
+                            <h4>1,5 ft grill</h4>
                         </div>
                         <div class="slideInLeft">
                             <div class="icon">
                                 <img class="myicon" src="img/icons/height.jpg">
                             </div>
-                            <h4>193 cm</h4>
+                            <h4>5,2 ft</h4>
                         </div>
                         <div class="slideInLeft">
                             <div class="icon">
@@ -183,7 +183,19 @@
                     <div class="col-md-6">
                         <div class="service wow fadeInUp text-left">
                             <h4>The original Schwenker</h4>
-                            <p>You will get a Schwenker which is produced in Saarland. The legs are made with aluminium to garantie a light weight.<br />The grill is made with rust free steal, so that you can leave the Schwenker outside without worrying.<br />The Schwenker will be delivered with the ultimate SchwenkTheWorld guide, so that you can directly start your carreer as a real Schwenk ambassador.</p>
+                            <p class="blacktext">You will get a Schwenker which is produced in Saarland. The legs are made with aluminium to garantie a light weight. So that you can use it in your garden and you can take it 
+                                for camping<br />The grill is made with rust free steal, so that you can leave the Schwenker outside without worrying.<br />The Schwenker will be delivered with our ultimate guide, so that you can directly start your carreer as a real Schwenk ambassador.</p>
+                            <p class="blacktext"><b>Features:</b><br/></p>
+                            <ul class="schwenkfeatures">
+                            <li>Made in Saarland</li>
+                            <li>Infinitely variable height adjustment</li>
+                            <li>100% original SchwenkTheWorld</li>
+                            <li>Lightweight build</li>
+                            <li>aluminium tripod</li>
+                            <li>nickel platet grill</li>
+                            <li>Easy set-up without tools</li>
+                            <li>100% rust free </li>
+                            </ul>
                         </div>
                     </div>
                     <div class="col-md-2">
