--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                         <div class="fill" style="background-image:url('img/banner.jpg');">
 </div>
                         <div class="carousel-caption">
+                            <img src="img/logoSchwenk.png" />
                             <h1 class="light margin-bottom-medium mat-none"><font face="Campton Bold, sans-serif"><b>Schwenk The World</b></font></h1>
                             <p class="light margin-bottom-medium">Schwenken is the Culture of a small country in the heart of Europe called <a href="https://en.wikipedia.org/wiki/Schwenker" target="_blank" style="color:#fff">Saarland</a>.
 It is more than just a way of doing BBQ. It is a way of life!<br />
