--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ It is more than just a way of doing BBQ. It is a way of life!<br />
                                         <!-- *** end Send Message *** -->
                                     </div>
                                     <div class="col-md-4 col-sm-4 col-xs-12">
-                                        <a href="schwenker.html" class="button pull-left internal-link bold-text main-bg hvr-grow" data-rel="#portfolio">Get your own Schwenker</a>
+                                        <a href="schwenker.html" class="button pull-left internal-link bold-text main-bg hvr-grow">Get your own Schwenker</a>
                                     </div>
                                     <div class="clearfix"></div>
                                 </div>
